extras/istio/dev/kunde-destinationrule.yaml
# Copyright (C) 2021 - present Juergen Zimmermann, Hochschule Karlsruhe
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

---
# https://istio.io/latest/docs/reference/config/networking/destination-rule
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kunde-rule
spec:
  host: kunde
  # https://istio.io/latest/docs/reference/config/networking/destination-rule/#Subset
  # Aufteilung der Endpoints (hier: anhand der Labels) von einem Service (hier: kunde)
  subsets:
    - labels:
        version: 2.0.0
      # "name" des subsets wird in einem VirtualService referenziert
      name: v2
      # Ueberlast vermeiden, wenn ein Pod nicht mehr funktioniert
      trafficPolicy:
        connectionPool:
          # https://istio.io/latest/docs/reference/config/networking/destination-rule/#ConnectionPoolSettings-TCPSettings
          tcp:
            maxConnections: 1
          # https://istio.io/latest/docs/reference/config/networking/destination-rule/#ConnectionPoolSettings-HTTPSettings
          http:
            http1MaxPendingRequests: 1
            http2MaxRequests: 1
            maxRequestsPerConnection: 1
    - labels:
        version: 1.0.0
      name: v1
      trafficPolicy:
        connectionPool:
          tcp:
            maxConnections: 1
          http:
            http1MaxPendingRequests: 1
            http2MaxRequests: 1
            maxRequestsPerConnection: 1
